[Header] Fixing overflow

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   padding: 1.5rem 2.5rem;
-  width: 100vw;
+  width: 100%;
   color: var(--neutral-color);
 }
 
